# BergCalc

./: .gitignore  .gitmodules  README.md  TODO.md  calculator.py  evaluate.py  exp.py  gauss-kronrod.py  graph.py  integration.py  ln.py  long-division.py  nthroot.py  symbolic-algebra.py  symbolicalgebra.py  trig.py
decimal-math/: Cargo.toml
decimal-math/src/: main.rs
decimal-math/src/decimal/: mod.rs
python/: evaluate.py  graph.py  symbolicalgebra.py
python/utils/: exp.py  integration.py  ln.py  nthroot.py
rust-calculator/: Cargo.toml  build.rs
rust-calculator/calc-core/: Cargo.toml
rust-calculator/calc-core/src/: differentiate.rs  evaluate.rs  expr.rs  gauss_kronrod.rs  io.rs  lib.rs  parser.rs  repl.rs  simplify.rs  solver.rs
rust-calculator/calc-desktop/: Cargo.toml
rust-calculator/calc-desktop/src/: main.rs
rust-calculator/calc-pico/: Cargo.toml
rust-calculator/calc-pico/src/: main.rs
rust-calculator/src/: differentiate.rs  evaluate.rs  expr.rs  lib.rs  main.rs  parser.rs  simplify.rs
rust-calculator/tests/: parser_tests.rs
rust-parser/: Cargo.toml
rust-parser/src/: evaluate.rs  expr.rs  lib.rs  main.rs  parser.rs
rust-parser/tests/: parser_tests.rs
