[package]
name = "calc-pico"
version = "0.1.0"
edition = "2024"

[dependencies]
calc-core = { path = "../calc-core" }
cortex-m-rt = "0.7"
critical-section = {version = "1.2.0"}
heapless = "0.8.0"
panic-halt = "0.2.0"
rp235x-hal = {path = "../rp-hal/rp235x-hal", version = "0.4.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
usb-device = "0.3.2"
usbd-serial = "0.2.2"
embedded-alloc = "0.7.0"